PZ-48,PZ-66-71| Test framework PearlZip;Callback Unit Tests | Updated pom configuration;Implemented unit tests; Updated issue in NameHighlightFileInfoCellCallback for custom icon